[package]
name = "lvc"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ff = { version = "0.5", features = ["parallel", "asm"] }
ark-ec = { version = "0.5", features = ["parallel"] }
ark-std = { version = "0.5", features = ["parallel"] }
ark-poly = { version = "0.5", features = ["parallel"] }
ark-serialize = { version = "0.5", features = ["derive", "parallel", "std"] }
ark-bls12-381 = { version = "0.5", features = ["curve", "scalar_field"] }

rand = "0.8.5"
rayon = "1.10"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports", "plotters", "async_tokio"] }

[[bench]]
name = "lvc"
harness = false